--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ Homepage = "https://github.com/brainkcl/nmriprep"
 
 [project.scripts]
 argprep = "nmriprep.argprep.argprep:main"
+roi_extract = "nmriprep.measure:roi_extract"
 
 [tool.hatch.build]
 include = [
